--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
   <!--以下のscriptタグの参照はここから-->
   <!--https://cdnjs.com/libraries/p5.js-->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  <!-- p5.soundのライブラリ -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"
-    integrity="sha512-U2sgwrFhl+Tgx9iGH9h5Ba2WyIjyCes+D0prtIFw3a0V+/fkaeL5Cd/VjyPHno9kUPE1rnNhBGTyvtZsfJp0xg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="util/eventListener/eventRegistry.js"></script>
+  <script src="util/eventListener/eventListener.js"></script>
+  <script src="svgFiles/Element.js"></script>
+  <script src="svgFiles/fileUploader/Uploader.js"></script>
+  <script src="svgFiles/fileUploader/UploaderStyle.js"></script>
+  <script src="svgFiles/file/FileDivElements.js"></script>
+  <script src="svgFiles/file/FilesStyle.js"></script>
+  <script src="svgFiles/file/SVGFile.js"></script>
+  <script src="svgFiles/svgLoader.js"></script>
+  <script src="svgFiles/FileList.js"></script>
   <script src="main.js"></script>
   <link href="style.css" rel="stylesheet">
   <title>p5.jsのテンプレート</title>
 </head>
 
 <body>
+  <div id = "fileList"></div>
 </body>
 
 </html>
