--- a/index.html
+++ b/index.html
@@ -5,19 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--以下のscriptタグの参照はここから-->
-  <!--https://cdnjs.com/libraries/p5.js-->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  <script src="util/eventListener/eventRegistry.js"></script>
-  <script src="util/eventListener/eventListener.js"></script>
-  <script src="svgFiles/Element.js"></script>
-  <script src="svgFiles/fileUploader/Uploader.js"></script>
-  <script src="svgFiles/fileUploader/UploaderStyle.js"></script>
-  <script src="svgFiles/file/FileDivElements.js"></script>
-  <script src="svgFiles/file/FilesStyle.js"></script>
-  <script src="svgFiles/file/SVGFile.js"></script>
-  <script src="svgFiles/svgLoader.js"></script>
-  <script src="svgFiles/FileList.js"></script>
-  <script src="main.js"></script>
+  <script src="./dist/main.js"></script>
   <link href="style.css" rel="stylesheet">
   <title>p5.jsのテンプレート</title>
 </head>
