--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
 </head>
 
 <body>
-  <div id = "fileList"></div>
-  <div id = "canvasWrapper"></div>
+  <div id="fileList"></div>
+  <div id="canvasWrapper">
+    <div id="canvas">
+      <div id="progressWrapper">
+        <div id = "progressBox">
+          <p id = "progressText">
+            レンダリング中...
+          </p>
+          <div id="progressBar">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
